Use cargo-crusader.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 sudo: false
 language: rust
 rust:
-- stable
-- beta
-- nightly
+    - stable
+    - beta
+    - nightly
 before_script:
-- pip install 'travis-cargo>=0.1.0,<0.2.0' --user
-- pip install 'CppHeaderParser>=2.7.2,<3.0.0' --user
-- export PATH="$HOME/.local/bin:$PATH"
+    - pip install 'travis-cargo>=0.1.0,<0.2.0' --user
+    - pip install 'CppHeaderParser>=2.7.2,<3.0.0' --user
+    - cargo install --git https://github.com/brson/cargo-crusader --root $HOME/.local 
+    - export PATH="$HOME/.local/bin:$PATH"
 script:
-- travis-cargo build
-- travis-cargo test
-- travis-cargo --only stable doc
+    - travis-cargo build
+    - travis-cargo test
+    - cargo crusader
+    - travis-cargo --only stable doc
 after_success:
-- travis-cargo --only stable doc-upload
+    - travis-cargo --only stable doc-upload
 env:
     global:
         - RUST_BACKTRACE=1
