Rewrite to use rusty-binder
* Rewrite cheddar to use rusty-binder
* Check current uses while resolving types
* Allow the extend cheddar with custom type modules (like it's done with
libc and std::os::raw)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ name = "cheddar"
 doc = false
 
 [dependencies]
-syntex_syntax = "0.24.0"
-toml = "0.1.25"
+itertools = "0.4.18"
+# TODO: change this as soon as syntex update is merged
+rusty-binder = { git = "https://gitlab.com/weiznich/rusty-binder", rev = "1fa14ace139c6aba839f3b86d6ea2a71f32d49c7" }
 clap = "1"
